Made quotes and citations look way better.

--- a/src/site/resources/styles/functional-web-testing.css
+++ b/src/site/resources/styles/functional-web-testing.css
@@ -121,6 +121,14 @@ li ul li{
 	text-align: left;
 }
 
+.quote {
+	margin-top: 150px;
+}
+
+.citation {
+	font-size: 24pt;
+}
+
 .slide {
 	color: #00275d;
 }
