Finished CSS for 4:3 ratio presentation.

--- a/src/site/resources/styles/security-web-testing.css
+++ b/src/site/resources/styles/security-web-testing.css
@@ -178,10 +178,15 @@ a:focus {
 */
 .slide {
     display: block;
-
+    
     width: 900px;
     height: 700px;
-    padding: 40px 60px;
+    
+    margin: 0;
+    padding-bottom: 30px;
+    padding-left: 30px;
+    padding-right: 125px;
+    padding-top: 115px;
 
 /*     background-color: white; */
 /*     border: 1px solid rgba(0, 0, 0, .3); */
@@ -213,7 +218,7 @@ a:focus {
 	background-repeat: no-repeat;
 	background-size: 35%;
 	content: '';
-	height: 200px;
+	height: 140px;
 	left: 0;
 	position: absolute;
 	top: -30px;
@@ -235,13 +240,6 @@ a:focus {
 	width: 100%;
 }
 
-.slide:after :after {
-	background-color: blue;
-	content: '';
-	height: 100px;
-	width: 100px;
-}
-
 .slide q {
     display: block;
     font-size: 50px;
@@ -255,11 +253,58 @@ a:focus {
 }
 
 .slide h1 {
+/*   background-color: #dddddd; */
 	font-size: 48pt;
+	line-height: 1;
+	margin-bottom: 20px;
+	text-align: center;
+}
+
+.slide h2 {
+  font-size: 40px;
+  line-height: 1.5;
+  margin-bottom:20px;
+}
+
+.slide-bulleted {
+}
+
+.slide-bulleted h1 {
+  
+}
+
+.slide-bulleted ul {
+  list-style: disc;
+}
+
+.slide-bulleted ul li {
+  font-size: 32px;
+  line-height: 1.5;
+  margin-left: 30px;
+}
+
+.slide-image {
+}
+
+.slide-image img {
+  height: 380px;
+  width: 680px;
+}
+
+.slide-section {
+  
+}
+
+.slide-section h1 {
+  margin-top: 150px;
 }
 
 .slide-title  h1 {
-	margin: 200px auto;
+	margin-top: 100px;
+}
+
+.slide-title h2 {
+  text-align: center;
 }
 
 /*
