--- a/src/site/resources/styles/security-web-testing.css
+++ b/src/site/resources/styles/security-web-testing.css
@@ -179,7 +179,8 @@ a:focus {
 .slide {
     display: block;
     
-    width: 900px;
+/*     width: 900px; */
+    width: 1250px;
     height: 700px;
     
     margin: 0;
@@ -288,7 +289,8 @@ a:focus {
 
 .slide-image img {
   height: 380px;
-  width: 680px;
+/*   width: 680px; */
+  width: 1030px;
 }
 
 .slide-section {
